--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+html{
+  background-color: chocolate;
+  text-align: center;
+}
+.divi{
+  background-color: rgb(104, 248, 121);
+  border: solid 3px black;
+  border-radius: 3px;
+}
